# DNLP-Differentiation-Engine

./: .gitignore  BLAS_README.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  TODO.md  pyproject.toml
.github/: formatting.yml  valgrind.yml
.github/workflows/: cmake.yml  sanitizer.yml
docs/: problem_struct_design.md
include/: affine.h  bivariate.h  blas.h  elementwise.h  elementwise_univariate.h  expr.h  other.h  problem.h  subexpr.h
include/affine/: add.h  constant.h  variable.h
include/utils/: CSC_Matrix.h  CSR_Matrix.h  Timer.h  Vec_macros.h  blas_wrappers.h  int_double_pair.h  mini_numpy.h
python/: CMakeLists.txt  bindings.c  convert.py  example.py
python/atoms/: add.h  constant.h  exp.h  index.h  left_matmul.h  linear.h  log.h  multiply.h  neg.h  promote.h  rel_entr.h  right_matmul.h  sum.h  variable.h
python/problem/: constraint_forward.h  gradient.h  hessian.h  jacobian.h  make_problem.h  objective_forward.h
python/tests/: convert_tests.py  test_basic_convert.py  test_constrained.py  test_linear_op_offset.py  test_problem_convert.py  test_problem_native.py  test_unconstrained.py
src/: expr.c  problem.c
src/affine/: add.c  broadcast.c  constant.c  diag_vec.c  hstack.c  index.c  linear_op.c  neg.c  promote.c  reshape.c  sum.c  trace.c  transpose.c  variable.c
src/bivariate/: const_scalar_mult.c  const_vector_mult.c  left_matmul.c  matmul.c  multiply.c  quad_over_lin.c  rel_entr.c  rel_entr_scalar_vector.c  rel_entr_vector_scalar.c  right_matmul.c
src/dnlp_diff_engine/: __init__.py
src/elementwise/: exp.c  log.c
src/elementwise_univariate/: common.c  entr.c  exp.c  hyperbolic.c  log.c  logistic.c  power.c  trig.c  xexp.c
src/other/: prod.c  prod_axis_one.c  prod_axis_zero.c  quad_form.c
src/utils/: CSC_Matrix.c  CSR_Matrix.c  blas_wrappers.c  int_double_pair.c  mini_numpy.c  utils.c
tests/: all_tests.c  test_helpers.c
tests/forward_pass/: all_tests.c  minunit.h  test_helpers.c  test_helpers.h  test_matmul.h  test_prod_axis_one.h  test_prod_axis_zero.h
tests/forward_pass/affine/: test_add.c  test_add.h  test_hstack.h  test_linear_op.h  test_neg.h  test_promote.h  test_sum.h  test_variable_constant.c
tests/forward_pass/composite/: test_composite.c  test_composite.h
tests/forward_pass/elementwise/: test_exp.c  test_exp.h  test_log.c  test_log.h
tests/jacobian_tests/: test_composite.h  test_const_scalar_mult.h  test_const_vector_mult.h  test_elementwise_mult.h  test_hstack.h  test_index.h  test_left_matmul.h  test_log.h  test_matmul.h  test_neg.h  test_prod.h  test_prod_axis_one.h  test_prod_axis_zero.h  test_promote.h  test_quad_form.h  test_quad_over_lin.h  test_rel_entr.h  test_sum.h  test_transpose.h
tests/problem/: test_problem.h
tests/python/: test_constrained.py  test_problem_native.py  test_unconstrained.py
tests/utils/: multiply_test.py  python_test.py  python_test2.py  test_blas.h  test_csc_matrix.h  test_csr_matrix.h
tests/wsum_hess/: test_const_scalar_mult.h  test_const_vector_mult.h  test_hstack.h  test_index.h  test_left_matmul.h  test_log.h  test_matmul.h  test_multiply.h  test_power.h  test_prod.h  test_prod_axis_one.h  test_prod_axis_zero.h  test_quad_form.h  test_quad_over_lin.h  test_rel_entr.h  test_sum.h  test_transpose.h
tests/wsum_hess/elementwise/: test_entr.h  test_exp.h  test_hyperbolic.h  test_log.h  test_logistic.h  test_power.h  test_trig.h  test_xexp.h
